plugins {
    id 'java'
    id 'maven-publish'
    id 'java-gradle-plugin'
    id 'groovy'
}

group = 'com.featherloader'
version = '1.0.2'

repositories {
    mavenCentral()
    maven {
        name = 'SpongePowered'
        url = 'https://repo.spongepowered.org/maven'
    }
    maven { url = 'https://maven.fabricmc.net/' }
    gradlePluginPortal()
}

dependencies {
    implementation 'org.spongepowered:mixin:0.8.5'
    implementation 'org.json:json:20230227'

    compileOnly fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'com.google.guava:guava:33.0.0-jre'

    implementation gradleApi()
    implementation localGroovy()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.featherloader.installer.FeatherInstaller',
                'Implementation-Title': 'FeatherLoader',
                'Implementation-Version': project.version
        )
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/MANIFEST.MF'
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/YourUsername/FeatherLoader")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
}

task runDev(type: JavaExec) {
    group = 'featherloader'
    description = 'Runs Minecraft with FeatherLoader in development mode'

    mainClass = 'com.featherloader.dev.DevLauncher'
    classpath = sourceSets.main.runtimeClasspath

    jvmArgs = [
            '-Dfeatherloader.minecraft.dir=' + project.findProperty('minecraftDir') ?: System.getProperty('user.home') + '/.minecraft',
            '-Dfeatherloader.dev.mods=' + project.projectDir.absolutePath,
            '-Dfeatherloader.mixins=true',
            '-Dfeatherloader.debug=true'
    ]

    // You'll need to provide Minecraft arguments here
    args = []
}